[gd_scene load_steps=11 format=3 uid="uid://dt833w23p04pc"]

[ext_resource type="Script" path="res://Scripts/Interface/ResultsScreen.gd" id="1_2j053"]
[ext_resource type="AudioStream" uid="uid://cik1qinxkrhd4" path="res://BGM/Sonic Adventure - Round Clear.ogg" id="2_ixxww"]
[ext_resource type="AudioStream" uid="uid://dgepl3f6ux0se" path="res://SFX/Score Tally.WAV" id="3_otody"]
[ext_resource type="AudioStream" uid="uid://fxbmunmqvlsa" path="res://SFX/Beep.WAV" id="4_gt261"]
[ext_resource type="PackedScene" uid="uid://cbc0ae2sn7j0v" path="res://Objects/ScreenFade.tscn" id="5_umt0v"]

[sub_resource type="LabelSettings" id="LabelSettings_ydy4g"]
line_spacing = 2.0
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_qgvlq"]
line_spacing = 2.0
font_size = 20
font_color = Color(1, 0.466667, 0.219608, 1)

[sub_resource type="Animation" id="Animation_lnfxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGectangle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ResultsFade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MissionClear:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ResultsScoreLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ResultsScoreRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ResultsTimeLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ResultsTimeRight:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ResultsRingsLeft:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ResultsRingsRight:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ResultsTimeBonusLeft:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ResultsTimeBonusRight:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ResultsTotalLeft:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ResultsTotalRight:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_77llj"]
resource_name = "results_appear"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGectangle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ResultsFade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.360784)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MissionClear:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGMResults")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ResultsScoreLeft:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.4, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ResultsScoreRight:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(-0.4, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ResultsTimeLeft:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(-0.4, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ResultsTimeRight:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(-0.4, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ResultsRingsLeft:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(-0.4, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ResultsRingsRight:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(-0.4, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ResultsTimeBonusLeft:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(-0.5, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ResultsTimeBonusRight:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(-0.6, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ResultsTotalLeft:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(-0.5, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ResultsTotalRight:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(-0.5, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/14/type = "method"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(3.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"results_tally_begin"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wlrqd"]
_data = {
"RESET": SubResource("Animation_lnfxb"),
"results_appear": SubResource("Animation_77llj")
}

[node name="ResultsScreen" type="CanvasLayer"]
script = ExtResource("1_2j053")

[node name="ResultsFade" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -248.0
offset_right = 328.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0)

[node name="BGectangle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)

[node name="ColorRect" type="ColorRect" parent="BGectangle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -72.0
offset_right = 156.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0823529, 0.223529, 0.580392, 0.501961)

[node name="MissionClear" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -105.0
offset_right = 91.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "MISSION CLEARED!"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultsScoreLeft" type="Label" parent="."]
visible = false
offset_left = 184.0
offset_top = 176.0
offset_right = 248.0
offset_bottom = 204.0
size_flags_horizontal = 0
text = "SCORE"
label_settings = SubResource("LabelSettings_ydy4g")
vertical_alignment = 1

[node name="ResultsScoreRight" type="Label" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -64.0
offset_right = -188.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
text = "00000000"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResultsTimeLeft" type="Label" parent="."]
visible = false
offset_left = 184.0
offset_top = 208.0
offset_right = 232.0
offset_bottom = 236.0
size_flags_horizontal = 0
text = "TIME"
label_settings = SubResource("LabelSettings_ydy4g")
vertical_alignment = 1

[node name="ResultsTimeRight" type="Label" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -32.0
offset_right = -188.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
text = "0:00.00"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResultsRingsLeft" type="Label" parent="."]
visible = false
offset_left = 184.0
offset_top = 240.0
offset_right = 245.0
offset_bottom = 268.0
size_flags_horizontal = 0
text = "RINGS"
label_settings = SubResource("LabelSettings_ydy4g")
vertical_alignment = 1

[node name="ResultsRingsRight" type="Label" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_right = -188.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
text = "000"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResultsTimeBonusLeft" type="Label" parent="."]
visible = false
offset_left = 184.0
offset_top = 288.0
offset_right = 307.0
offset_bottom = 316.0
size_flags_horizontal = 0
text = "TIME BONUS"
label_settings = SubResource("LabelSettings_qgvlq")
vertical_alignment = 1

[node name="ResultsTimeBonusRight" type="Label" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 48.0
offset_right = -188.0
offset_bottom = 76.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
text = "00000"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResultsTotalLeft" type="Label" parent="."]
visible = false
offset_left = 184.0
offset_top = 312.0
offset_right = 315.0
offset_bottom = 340.0
size_flags_horizontal = 0
text = "TOTAL SCORE"
label_settings = SubResource("LabelSettings_qgvlq")
vertical_alignment = 1

[node name="ResultsTotalRight" type="Label" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 72.0
offset_right = -188.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
text = "0000000
"
label_settings = SubResource("LabelSettings_ydy4g")
horizontal_alignment = 2
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wlrqd")
}

[node name="BGMResults" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ixxww")
volume_db = 0.001

[node name="SfxTallyFinished" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_otody")

[node name="SfxBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gt261")

[node name="ExitFade" parent="." instance=ExtResource("5_umt0v")]
enabled = false
hang_time = 1.0

[node name="BeginFade" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="fade_finish" from="ExitFade" to="." method="_on_exit_fade_fade_finish"]
[connection signal="timeout" from="BeginFade" to="." method="_on_begin_fade_timeout"]
